<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sensor_list" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/software_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/combination_list" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mashup_list" />
        <item
            android:id="@+id/nav_my_equipment_management"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/management_list" />
        <item
            android:id="@+id/nav_my_equipment_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/control_list" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="Share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="Send" />
    </group>


</menu>
